--- a/styles.css
+++ b/styles.css
@@ -20,12 +20,15 @@ body {
 	height: 205px;
 }
 
-#login-form {
+#login-form, #register-form {
 	text-align: center;
 }
 
 #register-form {
 	display: none;
+	flex-direction: column;
+	max-height: 90vh;
+	overflow: scroll;
 }
 
 #page-content, #register-form {
@@ -47,26 +50,47 @@ form div {
 	display: flex;
 }
 
-form input {
-	width: -webkit-fill-available;
+form input, form select {
 	background-color: var(--form-background);
+}
+
+form input, form div, form select {
+	width: -moz-available;
+  width: -ms-fill-available;
+  width: -o-fill-available;
+  width: -webkit-fill-available;
+}
+
+form input, form select, .radio-input {
 	border: 2px solid white;
 	margin: 10px 5px;
 }
 
+.radio-input {
+	padding: 10px;
+}
+
 form button {
 	background-color: var(--button-color);
+	color: white;
 	border: 0;
 }
 
-form button, form input {
+form button, form input, form select {
 	padding: 10px;
-	color: #111;
 	border-radius: var(--radius);
 }
 
-#login-button {
-	width: -webkit-fill-available;
+form input[type="radio"] {
+	margin: 0;
+}
+
+form p{
+	opacity: 50%;
+}
+
+#login-button{
+	width: 100%;
 }
 
 #close-register-form {
@@ -83,4 +107,21 @@ form button, form input {
 	width: 100vw;
 	height: 100vh;
 	display: none;
+}
+
+.separator {
+	display: block;
+	width: 100%;
+	height: 1px;
+	background-color: black;
+	margin: 5px 0;
+}
+
+#custom-gender {
+	display: none;
+	flex-direction: column;
+}
+
+#custom-gender p {
+	margin: 5px 0;
 }
